Refactor out a new class for syncing field trials in child processes.

This is split off out of chrome_render_thread_observer.cc so that
we can use it in other processes than the renderer. For example, in
the GPU process which now receives field trial and feature state
on the command-line. (That will be done in a follow-up CL.)

BUG=616171

Review-Url: https://codereview.chromium.org/2020413002
Cr-Commit-Position: refs/heads/master@{#397316}

Former-commit-id: 23974972332452d270ba2af7fad725ce1a5e397c