chrome/renderer/chrome_render_thread_observer.h
@@ -9,10 +9,9 @@
 #include <string>
 
 #include "base/compiler_specific.h"
-#include "base/files/file_path.h"
 #include "base/macros.h"
 #include "base/memory/weak_ptr.h"
-#include "base/metrics/field_trial.h"
+#include "chrome/common/variations/child_process_field_trial_syncer.h"
 #include "components/content_settings/core/common/content_settings.h"
 #include "content/public/renderer/render_thread_observer.h"
 
@@ -31,8 +30,7 @@ class ResourceDispatcherDelegate;
 // a RenderView) for Chrome specific messages that the content layer doesn't
 // happen.  If a few messages are related, they should probably have their own
 // observer.
-class ChromeRenderThreadObserver : public content::RenderThreadObserver,
-                                    public base::FieldTrialList::Observer {
+class ChromeRenderThreadObserver : public content::RenderThreadObserver {
  public:
   ChromeRenderThreadObserver();
   ~ChromeRenderThreadObserver() override;
@@ -51,21 +49,18 @@ class ChromeRenderThreadObserver : public content::RenderThreadObserver,
   // content::RenderThreadObserver:
   bool OnControlMessageReceived(const IPC::Message& message) override;
 
-  // base::FieldTrialList::Observer:
-  void OnFieldTrialGroupFinalized(const std::string& trial_name,
-                                  const std::string& group_name) override;
-
   void OnSetIsIncognitoProcess(bool is_incognito_process);
   void OnSetContentSettingsForCurrentURL(
       const GURL& url, const ContentSettings& content_settings);
   void OnSetContentSettingRules(const RendererContentSettingRules& rules);
   void OnGetCacheResourceStats();
-  void OnSetFieldTrialGroup(const std::string& fiel_trial_name,
+  void OnSetFieldTrialGroup(const std::string& trial_name,
                             const std::string& group_name);
 
   static bool is_incognito_process_;
   std::unique_ptr<content::ResourceDispatcherDelegate> resource_delegate_;
   RendererContentSettingRules content_setting_rules_;
+  chrome_variations::ChildProcessFieldTrialSyncer field_trial_syncer_;
 
   base::WeakPtrFactory<ChromeRenderThreadObserver> weak_factory_;
 
