chrome/chrome_common.gypi
@@ -102,6 +102,8 @@
       'common/url_constants.h',
       'common/v8_breakpad_support_win.cc',
       'common/v8_breakpad_support_win.h',
+      'common/variations/child_process_field_trial_syncer.cc',
+      'common/variations/child_process_field_trial_syncer.h',
       'common/variations/variations_util.cc',
       'common/variations/variations_util.h',
       'common/web_application_info.cc',
